[project]
name = "light_artifactory_client"
version = "1.0.0"
description = "A light Python client for Artifactory"
authors = [{ name = "albr21" }]
dependencies = [
    "requests>=2.28.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
